--- a/client/src/components/Sidebar/menu/SubMenuItem.scss
+++ b/client/src/components/Sidebar/menu/SubMenuItem.scss
@@ -24,6 +24,8 @@
 
 
 .sidebar-sub-menu-panel {
+    display: flex;
+    flex-direction: column;
     background: $nav-submenu-bg;
     width: $menu-width;
     height: 100vh;
@@ -60,7 +62,6 @@
     }
 
     > ul {
-        overflow: auto;
         flex-grow: 1;
         padding: 0;
         margin: 0;
